<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_splash"
    tools:context=".activities.OnboardingWelcomeActivity">

    <!-- Background image -->


    <View
        android:id="@+id/outerShadowView"
        android:layout_width="77dp"
        android:layout_height="76dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="88dp"
        android:background="@drawable/outer_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/outerShadowView2"
        android:layout_width="46dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/outer_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/outerShadowView3"
        android:layout_width="46dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="336dp"
        android:background="@drawable/outer_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivOnboardingBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitEnd"
        android:src="@drawable/onboarding_bg_image"
        android:contentDescription="@string/onboarding_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Top decorative element (same as other screens) -->
    <View
        android:id="@+id/ellipseEffect1"
        android:layout_width="@dimen/ellipse_large"
        android:layout_height="@dimen/ellipse_large"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-50dp"
        android:background="@drawable/ellipse_effect_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- A different background effect for variety -->
    <View
        android:id="@+id/ellipseEffect"
        android:layout_width="432dp"
        android:layout_height="480dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="576dp"
        android:background="@drawable/ellipse_effect_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <!-- Main content container for text and arrow -->

    <!-- The "Let's start" button -->

    <LinearLayout
        android:id="@+id/topContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_extra_large"
        android:paddingEnd="@dimen/padding_extra_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:lineSpacingExtra="4dp"
            android:text="@string/start_your_fitness_odyssey"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_huge"
            android:textStyle="bold" />

        <!-- The curved arrow SVG image -->
        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_huge"
            android:gravity="start"
            android:text="@string/start_your_fitness_journey"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_size_medium" />

        <ImageView
            android:id="@+id/ivCurvedArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:contentDescription="@string/onboarding_curved_arrow"
            android:src="@drawable/ic_curved_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnLetsStart"
        android:layout_width="354dp"
        android:layout_height="69dp"
        android:layout_marginBottom="@dimen/margin_extra_large"
        android:background="@drawable/semi_transparent_button_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/onboarding_button_arrow_left"
            android:src="@drawable/ic_arrow_left_container" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/start_now"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/onboarding_button_next_arrows"
            android:src="@drawable/ic_next_arrow_container" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
